style the index page and forms for message/chatroom

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -10,23 +10,12 @@
       </ul>
     </div>
   <% end %>
+  <%= form.hidden_field :chatroom_id, value: chatroom.id %>
 
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.text_area :content %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :chatroom_id %>
-    <%= form.text_field :chatroom_id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="input-group">
+    <%= form.text_field :content, placeholder: "Type your message here...", class: 'form-control' %>
+    <div class="input-group-append">
+      <%= form.submit "Add Message", class: "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
