--- a/app/views/chatrooms/_form.html.erb
+++ b/app/views/chatrooms/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: chatroom, local: true) do |form| %>
   <% if chatroom.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(chatroom.errors.count, "error") %> prohibited this chatroom from being saved:</h2>
+      <h2><%= pluralize(room.errors.count, "error") %> prohibited this room from being saved:</h2>
 
       <ul>
         <% chatroom.errors.full_messages.each do |message| %>
@@ -11,12 +11,10 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+  <div class="form-group mb-3">
+    <%= form.label "Add a new chatroom" %>
+    <%= form.text_field :name, class: 'form-control', placeholder: "Chatroom name" %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  <%= form.submit "Add", class: "btn btn-outline-primary btn-block" %>
 <% end %>
