--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,27 +1,48 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Chatrooms</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @chatrooms.each do |chatroom| %>
-      <tr>
-        <td><%= chatroom.name %></td>
-        <td><%= link_to 'Show', chatroom %></td>
-        <td><%= link_to 'Edit', edit_chatroom_path(chatroom) %></td>
-        <td><%= link_to 'Destroy', chatroom, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Chatroom', new_chatroom_path %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-3 rooms-sidebar">
+      <div class="card no-outline">
+        <div class="card-body">
+          <small>Logged in as</small><br>
+          <b><br></b>
+        </div>
+      </div>
+      <hr>
+      <%= render 'form', chatroom: Chatroom.new %>
+      <hr>
+      <% @chatrooms.each do |chatroom| %>
+        <%= link_to chatroom, class: 'chatroom-link' do %>
+          <% active_class = (@chatroom == chatroom) ? 'active' : '' %>
+          <div class="card no-outline mb-2 room-card <%= active_class %>">
+            <div class="card-body">
+              <span class='name'><%= chatroom.name %></span><br>
+              <span class='member-count'>
+                <small><%= chatroom.users.uniq.count %> Users</small>
+              </span>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+    <div class="col-9">
+      <% if @chatroom.present? %>
+        <div class="chat-room">
+          <nav class="navbar navbar-light">
+            <span class="navbar-brand" href="#">
+              <b><%= @chatroom.name %></b>
+            </span>
+            <small><%= @chatroom.users.uniq.count %> Members</small>
+          </nav>
+          <div id="messages">
+            <% @chatroom.messages.each do |message| %>
+              <%= render 'messages/message', message: message %>
+            <% end %>
+          </div>
+          <div class="chat-box">
+            <%= render 'messages/form', message: Message.new, chatroom: @chatroom %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
