add Sass styling, re-factor the look

--- a/app/views/chatrooms/_form.html.erb
+++ b/app/views/chatrooms/_form.html.erb
@@ -16,5 +16,5 @@
     <%= form.text_field :name, class: 'form-control', placeholder: "Chatroom name" %>
   </div>
 
-  <%= form.submit "Add", class: "btn btn-outline-primary btn-block" %>
+  <%= form.submit "Add", class: "btn btn-add btn-outline btn-block" %>
 <% end %>
