--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-3 rooms-sidebar">
-      <div class="card no-outline">
+      <div class="card no-outline mt-2">
         <div class="card-body">
           <small>Logged in as</small><br>
           <b><%= current_user.nickname %><br></b>
