--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,3 +1,5 @@
+<div id="user-id" data-user-id="<%= current_user.id %>"></div>
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-3 rooms-sidebar">
